2004-10-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_properties1_activate): the property window
	should never have been modal

2004-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (totem_disc_resolve_link), (get_device),
	(cd_cache_new), (cd_cache_open_device), (cd_cache_open_mountpoint),
	(cd_cache_disc_is_cdda), (cd_detect_type_from_dir):
	* src/totem-disc.h: add a cd_detect_type_from_dir() to be able to
	tell whether a particular directory is a DVD, or VCD, use
	g_file_read_link instead of readlink

2004-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/video-utils.c: (totem_ratio_fits_screen): no warnings when
	height or width == 0 (Closes: #155376)

2004-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (totem_disc_resolve_link), (get_device):
	* src/totem-disc.h: remove uses of gint and gchar, follow relative
	symlinks when checking for the real device name

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* README: Add basic telestrator instructions
	* src/Makefile.am:
	* src/totem-gromit.c: (totem_gromit_available), (launch),
	(gromit_exit), (gromit_timeout_cb), (totem_gromit_toggle),
	(totem_gromit_clear):
	* src/totem-gromit.h:
	* src/totem.c: (totem_action_exit), (totem_action_handle_key):
	Add a beta Telestrator mode, you need Gromit installed to use it

2004-10-13  Julien MOUTTE  <julien@moutte.net>

	* src/totem-pl-parser.c: (totem_pl_parser_base_url): Fix a crash when
	saving playlist of uri like http://

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_disc_is_vcd), (cd_cache_disc_is_dvd):
	Fix detection of DVDs without an AUDIO_TS directory (Closes: #155281),
	speed up the sub-dir checking in the DVD and VCD cases

============ Version 0.99.19

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.99.19

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd